testing change of url

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <ul class="nav nav-pills">
-      <li role="presentation" class="active"><a href="#">Home</a></li>
+      <li role="presentation" class="active"><a href="/">Home</a></li>
       <li role="presentation"><a href="map">Map</a></li>
       <li role="presentation"><a href="timeline">Timeline</a></li>
       <li role="presentation>"><a href="graph">Graph</a> </li>
