--- a/django_project/flood/templates/flood/graph.html
+++ b/django_project/flood/templates/flood/graph.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <ul class="nav nav-pills">
-      <li role="presentation"><a href="#">Home</a></li>
+      <li role="presentation"><a href="/">Home</a></li>
       <li role="presentation"><a href="map">Map</a></li>
       <li role="presentation"><a href="timeline">Timeline</a></li>
       <li role="presentation>" class="active"><a href="graph">Graph</a> </li>
