--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -60,7 +60,7 @@
     {% endif %}
     <script>
         if (dates[0] != ""){
-            if (trace1.x === 0 || trace1.x.length == 0){
+            if (trace1.x === 0 || trace1.y.length <= 1){
                 document.write('<h3>No Rain gauge data available for the dates selected.</h3>')
             }
             else {
