--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -60,8 +60,11 @@
     {% endif %}
     <script>
         if (dates[0] != ""){
-            if (trace1.x === 0 || trace1.y.length <= 1){
-                document.write('<h3>No Rain gauge data available for the dates selected.</h3>')
+            if (trace1.x === 0 || trace1.y.length == 0){
+                document.write('<h3>No Rain gauge data available for the flood event selected.</h3>')
+            }
+            else if (trace1.y.length <= 1) {
+                document.write('<h3>Not enough rain gauge data available for selected flood event.</h3>')
             }
             else {
                 document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
