--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -61,10 +61,10 @@
     <script>
         if (dates[0] != ""){
             if (trace1.x === 0 || trace1.y.length == 0){
-                document.write('<h6 text-align="center">No Rain gauge data available for the flood event selected.</h6>')
+                document.write('<h4 style="text-align: center">No Rain gauge data available for the flood event selected.</h4>')
             }
             else if (trace1.y.length <= 1) {
-                document.write('<h6 text-align="center">Not enough rain gauge data available for selected flood event.</h6>')
+                document.write('<h4 style="text-align: center">Not enough rain gauge data available for selected flood event.</h4>')
             }
             else {
                 document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
@@ -73,7 +73,7 @@
             }
         }
         else if (dates[0] == ""){
-            document.write('<h3>Displaying rain gauge for all available dates.</h3>')
+            document.write('<h4 style="text-align: center">Displaying rain gauge for all available dates.</h4>')
             document.write('<div id="myDiv" style="min-width: 1100px; width:100%; height: 400px;"><!-- Plotly chart will be drawn inside this DIV --></div>')
             var data = [trace1];
             Plotly.newPlot('myDiv', data);
