--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -83,13 +83,20 @@
         {% if photo_list %}
             {% for photo in photo_list %}
                 <script>
+                    var score = "{{ photo.score }}";
+                    function up(){
+                            score = score + 1
+                            document.getElementById("score").innerHTML = score
+                            location.replace("upvote/{{ photo.id }}")
+                            }
+
                     var photoDate = new Date("{{ photo.date_taken|date:'SHORT_DATE_FORMAT' }}");
 
                     if (photoDate >= new Date(dates[0]) && photoDate <= new Date(dates[1])) {
-                        document.write('<li><a href="{{ photo.url }}">{{ photo.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ photo.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ photo.locality }}</b><img src="{{ photo.url }}" height="100%" width="100%" /><a href="upvote/{{ photo.id }}" class="btn btn-success" role="button">up</a><a href="downvote/{{ photo.id }}" class="btn btn-danger" role="button">down</a><b>{{ photo.score }}</b></div></div></li>')
+                        document.write('<li><a href="{{ photo.url }}">{{ photo.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ photo.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ photo.locality }}</b><img src="{{ photo.url }}" height="100%" width="100%" /><a href="upvote/{{ photo.id }}" class="btn btn-success" role="button">up</a><a href="downvote/{{ photo.id }}" class="btn btn-danger" role="button">down</a><b id="score">{{ photo.score }}</b></div></div></li>')
                     }
                     else if (dates[0] == ""){
-                        document.write('<li><a href="{{ photo.url }}">{{ photo.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ photo.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ photo.locality }}</b><img src="{{ photo.url }}" height="100%" width="100%" /><a href="upvote/{{ photo.id }}" class="btn btn-success" role="button">up</a><a href="downvote/{{ photo.id }}" class="btn btn-danger" role="button">down</a><b>{{ photo.score }}</b></div></div></li>')
+                        document.write('<li><a href="{{ photo.url }}">{{ photo.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ photo.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ photo.locality }}</b><img src="{{ photo.url }}" height="100%" width="100%" /><button onclick="up()" class="btn btn-success" type="button">up</button><a href="downvote/{{ photo.id }}" class="btn btn-danger" role="button">down</a><b id="score">{{ photo.score }}</b></div></div></li>')
                     }
                 </script>
             {% endfor %}
