fixing dynamically changing score.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -87,7 +87,7 @@
                     function up(){
                             score = score + 1
                             document.getElementById("score").value = score
-                            window.location.href("upvote/{{ photo.id }}")
+                            window.location.href("46.101.11.228/upvote/{{ photo.id }}")
                             }
 
                     var photoDate = new Date("{{ photo.date_taken|date:'SHORT_DATE_FORMAT' }}");
