--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -85,7 +85,9 @@
                 <script>
                     function up(id){
                             var scr = document.getElementById("Score").value;
+                            console.log(scr);
                             var finalScr = scr + 1;
+                            console.log(finalScr);
                             document.getElementById("Score").innerHTML = finalScr;
                             window.location.replace("upvote/"+id);
                             }
