fixing dynamically changing score.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -84,7 +84,7 @@
             {% for photo in photo_list %}
                 <script>
                     function up(id){
-                            var scr = document.getElementById("Score").value;
+                            var scr = document.getElementById("Score").innerHTML;
                             console.log(scr);
                             var finalScr = scr + 1;
                             console.log(finalScr);
