--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -86,7 +86,7 @@
                     function up(id){
                             var scr = document.getElementById("Score").innerHTML;
                             console.log(scr);
-                            var finalScr = scr + 1;
+                            var finalScr = parseInt(scr) + 1;
                             console.log(finalScr);
                             document.getElementById("Score").innerHTML = finalScr;
                             window.location.replace("upvote/"+id);
