First attempt at adding tweets to timeline. Created a combined list of tweets and photos ordered by date in timeline view to be passed to template.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -82,17 +82,24 @@
         }
     </script>
     <ul class="timeline">
-        {% if photo_list %}
-            {% for photo in photo_list %}
+        {% if combined_list %}
+            {% for object in combined_list %}
                 <script>
+                    var objDate = new Date("{{ object.0|date:'SHORT_DATE_FORMAT' }}");
+                    var objType = "{{ object.1 }}"
 
-                    var photoDate = new Date("{{ photo.date_taken|date:'SHORT_DATE_FORMAT' }}");
-
-                    if (photoDate >= new Date(dates[0]) && photoDate <= new Date(dates[1])) {
-                        document.write('<li><a href="{{ photo.url }}">{{ photo.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ photo.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ photo.locality }}</b><img src="{{ photo.url }}" height="100%" width="100%" /><button onclick="up({{ photo.id }})" class="btn btn-success" type="button">up</button><button onclick="down({{ photo.id }})" class="btn btn-danger" type="button">down</button><b id="score">{{ photo.score }}</b></div></div></li>')
+                    if (objDate >= new Date(dates[0]) && objDate <= new Date(dates[1])) {
+                        if(objType="photo"){
+                            document.write('<li><a href="{{ object.2.url }}">{{ object.2.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ object.2.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ object.2.locality }}</b><img src="{{ object.2.url }}" height="100%" width="100%" /><button onclick="up({{ object.2.id }})" class="btn btn-success" type="button">up</button><button onclick="down({{ object.2.id }})" class="btn btn-danger" type="button">down</button><b id="score">{{ object.2.score }}</b></div></div></li>')
+                        }
+                        else if(objType="tweet"){
+                            document.write('')
+                        }
                     }
                     else if (dates[0] == ""){
-                        document.write('<li><a href="{{ photo.url }}">{{ photo.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ photo.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ photo.locality }}</b><img src="{{ photo.url }}" height="100%" width="100%" /><button onclick="up({{ photo.id }})" class="btn btn-success" type="button">up</button><button onclick="down({{ photo.id }})" class="btn btn-danger" type="button">down</button><b id="Score">{{ photo.score }}</b></div></div></li>')
+                        if (objType = "photo"){
+                            document.write('<li><a href="{{ object.2.url }}">{{ object.2.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ object.2.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ object.2.locality }}</b><img src="{{ object.2.url }}" height="100%" width="100%" /><button onclick="up({{ object.2.id }})" class="btn btn-success" type="button">up</button><button onclick="down({{ object.2.id }})" class="btn btn-danger" type="button">down</button><b id="Score">{{ object.2.score }}</b></div></div></li>')
+                        }
                     }
                 </script>
             {% endfor %}
