--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -89,18 +89,18 @@
                     var objType = "{{ object.1 }}"
 
                     if (objDate >= new Date(dates[0]) && objDate <= new Date(dates[1])) {
-                        if(objType="photo"){
+                        if(objType == "photo"){
                             document.write('<li><a href="{{ object.2.url }}">{{ object.2.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ object.2.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ object.2.locality }}</b><img src="{{ object.2.url }}" height="100%" width="100%" /><button onclick="up({{ object.2.id }})" class="btn btn-success" type="button">up</button><button onclick="down({{ object.2.id }})" class="btn btn-danger" type="button">down</button><b id="score">{{ object.2.score }}</b></div></div></li>')
                         }
-                        else if(objType="tweet"){
+                        else if(objType == "tweet"){
                             document.write('<li class="timeline-inverted"><div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div> <div class="timeline-panel"><div class="timeline-body">{{ obj.2.html }}</div></div></li>')
                         }
                     }
                     else if (dates[0] == ""){
-                        if (objType = "photo"){
+                        if (objType == "photo"){
                             document.write('<li><a href="{{ object.2.url }}">{{ object.2.date_taken }}</a><div class="timeline-badge"><i class="glyphicon glyphicon-camera"></i></div><div class="timeline-panel"><div class="timeline-heading"><h4 class="timeline-title">{{ object.2.date_taken.text }}</h4></div><div class="timeline-body"><b>{{ object.2.locality }}</b><img src="{{ object.2.url }}" height="100%" width="100%" /><button onclick="up({{ object.2.id }})" class="btn btn-success" type="button">up</button><button onclick="down({{ object.2.id }})" class="btn btn-danger" type="button">down</button><b id="Score">{{ object.2.score }}</b></div></div></li>')
                         }
-                        else if (objType="tweet"){
+                        else if (objType == "tweet"){
                             document.write('<li class="timeline-inverted"><div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div> <div class="timeline-panel"><div class="timeline-body">{{ obj.2.html }}</div></div></li>')
                         }
                     }
