--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script type="text/javascript" src="{% static 'flood/js/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'flood/js/timelinefunctions.js' %}"></script>
-    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <!-- Plotly.js -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
