--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -10,16 +10,17 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
+  <nav class="nav nav-pills">
+    <li role="presentation" class="active"><a href="/">Home</a></li>
+    <li role="presentation"><a href="map">Map</a></li>
+    <li role="presentation"><a href="timeline">Timeline</a></li>
+  </nav>
+  <div class="jumbotron">
+    <h1>Flooding Updates:</h1>
+    <div>{{ message }}</div>
+  </div>
   <div class="container">
-    <ul class="nav nav-pills">
-      <li role="presentation" class="active"><a href="/">Home</a></li>
-      <li role="presentation"><a href="map">Map</a></li>
-      <li role="presentation"><a href="timeline">Timeline</a></li>
-    </ul>
-    <div class="jumbotron">
-      <h1>Flooding:</h1>
-        <h3>{{ message }}</h3>
-    </div>
+    HELLLOOO DATASDASDK
   </div>
 </body>
 </html>
