experimenting with look of index.html

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -23,8 +23,9 @@
  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
 
- <div id="map"></div>
-
+ <div class="container">
+    <div id="map"></div>
+ </div>
  <script>
 
    // initialize the map
