--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -16,8 +16,7 @@
     <li role="presentation"><a href="timeline">Timeline</a></li>
   </nav>
   <div class="jumbotron">
-    <h1>Flooding Updates:</h1>
-    <div>{{ message }}</div>
+    <div><{{ message }}</div>
   </div>
   <div class="container">
     HELLLOOO DATASDASDK
