adding missing if statement

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -22,7 +22,7 @@
       {% endfor %}
     {% else %}
       <h5 style="text-align: center">There are no flood alerts</h5>
-
+    {% endif %}
   </div>
   <div class="container">
     HELLLOOO DATASDASDK
