--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -18,7 +18,7 @@
   <div class="jumbotron">
     {% if floods %}
       {% for flood in floods %}
-        <li>Location:{{flood.description}, Type:{{ flood.severity }}, Threat Level:{{ flood.severitylevel }}, Time: {{flood.time|date:'d/m/Y H:m'}}</li>
+        <li><p>Location: {{flood.description}</p><p>Type: {{ flood.severity }}</p> <p>Threat Level: {{ flood.severitylevel }}</p> <p>Time: {{flood.time|date:'d/m/Y H:m'}}</p></li>
       {% endfor %}
     {% else %}
       <h5 style="text-align: center">There are no flood alerts</h5>
