Added comments to code, added radius parameter to searchAreas fucntion in floodareas script.

--- a/django_project/flood/templates/flood/index.html
+++ b/django_project/flood/templates/flood/index.html
@@ -29,7 +29,7 @@
         <strong>No Warnings!</strong> There are currently no flood warnings.
       </div>
     {% endif %}
-    HELLLOOO DATASDASDK
+    To include: relevant information about the website/project
   </div>
 </body>
 </html>
